# practice

./: README.md
apm/: .gitignore
apm/APM11A1Assignment1/: APM11A1Assignment1.cpp  billType.h  dateType.cpp  dateType.h  doctorType.cpp  doctorType.h  patientType.h  personType.h
apm/APM11A1LabExercise1/: .gitignore  APM11A1LabExercise1.cpp  CurricularMarks.cpp  CurricularMarks.h  Results.h  StudentMarks.cpp  StudentMarks.h  Utils.h
apm/BusReservationSystemMain/: Bus.cpp  Bus.h  BusReservationSystemMain.cpp  Date.cpp  Date.h  Passenger.cpp  Passenger.h  Reservation.cpp  Reservation.h
apm/SeePlusPlusPractice/: SeePlusPlusPractice.cpp
csharp/: .gitignore
csharp/ApiGateway/: .gitignore  ApiGateway.sln  Program.cs  README.md
csharp/ConsoleBasedTaskManager/: .gitignore  ConsoleBasedTaskManager.sln  Program.cs  README.md
csharp/ConsoleShopper/: .gitignore  ConsoleShopper.sln  ManageUsers.cs  Program.cs  README.md  Startup.cs  Utils.cs
csharp/Playground/: .gitignore  Playground.sln  Program.cs
csharp/ProjectManagementSystem/: .gitignore  Program.cs  ProjectManagementSystem.csproj  ProjectManagementSystem.db  ProjectManagementSystem.http  ProjectManagementSystem.sln
csharp/SimpleBookStore_DotNetCoreWebAPI/: .gitignore  Program.cs  SimpleBookStore_DotNetCoreWebAPI.csproj  SimpleBookStore_DotNetCoreWebAPI.http  SimpleBookStore_DotNetCoreWebAPI.sln  WeatherForecast.cs  bookstore.db
data/: README.md
data/mssql/: Containerfile
data/mysql/: Containerfile  (+1 more)
python/ollama_model/: .gitignore  README.md  pyproject.toml
python/ollama_model/src/: chat.py  main.py
(+211 files in other folders)
